[workspace]
resolver = "2"

[package]
name = "gt-installer"
version = "0.1.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[[bin]]
name = "gt-installer"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0", features = [ "derive" ] }
fs_extra = "1.1.0"
rustc_version = "0.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_yaml = "0.8"
serde-xml-rs = "0.6.0"
url = "2.2.2"
octocrab = "0.9"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
semver = "1.0"
indicatif = "0.16.2"
console = { version = ">=0.9.1, <1.0.0", default-features = false }
feenk-releaser = { git = "https://github.com/feenkcom/releaser-rs", tag = "v0.10.0" }
zipper = { git = "https://github.com/feenkcom/build-helpers-rs" }
unzipper = { git = "https://github.com/feenkcom/build-helpers-rs" }
downloader = { git = "https://github.com/feenkcom/build-helpers-rs" }
commander = { git = "https://github.com/feenkcom/build-helpers-rs" }
file-matcher = "0.7.0"
mustache = "0.9"
to_absolute = "0.1"
parse_duration = "2.1"
user-error = "1.2.8"
thiserror = "1.0"
reqwest = "0.11.10"
ndk-build = "0.9"